feat: add comprehensive analytics, dashboard & betting features with refactored frontend